--- a/main-index.html
+++ b/main-index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Web App made using AI</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="sitewide-styles.css">
 </head>
 <body>
     <div class="container">
